# botsch-kobbelt-remesher-libigl

./: CMakeLists.txt  MANIFEST.in  pyproject.toml  setup.py
.github/workflows/: wheels.yml
